--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#certifications" data-i18n="nav_certifications"></a></li>
             <li><a href="#awards" data-i18n="nav_awards"></a></li>
             <li><a href="#projects" data-i18n="nav_projects"></a></li>
-            <li><a href="/files/CV.pdf" target="_blank" data-i18n="download_cv"></a></li>
+            <li><a href="/assets/cv/cv.pdf" target="_blank" data-i18n="download_cv"></a></li>
         </ul>
         <div class="language-switcher">
             <img src="/assets/images/flags/de.svg" alt="Deutsch" onclick="switchLanguage('de')">
